#1529 fixed FileUtils issue replaced readString with readAllBytes